--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="https://rawgithub.com/g-roma/freesound.js/master/freesound.js"></script>
     <script src="out/browser/goog/base.js" type="text/javascript"></script>
     <script src="out/browser/main.js" type="text/javascript"></script>
     <script type="text/javascript">goog.require("change_ringing.core");</script>
